--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "sass": "^1.49.8",
-    "svelte": "^3.44.0"
+    "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.10.4"
   },
   "type": "module"
 }
