--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "pretty-print-json": "^1.2.3",
     "sass": "^1.49.8",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.4"
